@@ -1,5 +1,7 @@
 package com.foodkeeper.foodkeeperserver.food.implement;
 
+import com.foodkeeper.foodkeeperserver.common.domain.Cursorable;
+import com.foodkeeper.foodkeeperserver.common.domain.SliceObject;
 import com.foodkeeper.foodkeeperserver.food.dataaccess.entity.FoodEntity;
 import com.foodkeeper.foodkeeperserver.food.dataaccess.repository.FoodRepository;
 import com.foodkeeper.foodkeeperserver.food.domain.Food;
@@ -13,6 +15,7 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
+import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Optional;
 
@@ -34,7 +37,7 @@ public class FoodManagerTest {
     @DisplayName("식재료 저장 요청 시 리포지토리 호출 및 결과 반환")
     void register_SUCCESS() throws Exception {
         //given
-        Food food = FoodFixture.createFood(1L);
+        Food food = FoodFixture.createFood();
         FoodEntity foodEntity = FoodFixture.createFoodEntity(1L);
 
         given(foodRepository.save(any(FoodEntity.class))).willReturn(foodEntity);
@@ -48,19 +51,22 @@ public class FoodManagerTest {
     @DisplayName("식재료 커서 요청 시 리포지토리 호출 및 리스트 결과 반환")
     void findFoodList_SUCCESS() throws Exception {
         //given
-        FoodsFinder finder = FoodFixture.createFirstPageFinder();
+        Long categoryId = 1L;
+        String memberKey = FoodFixture.MEMBER_KEY;
+        LocalDateTime lastCreatedAt = LocalDateTime.now();
+        Cursorable cursorable = new Cursorable(1L,2);
 
         FoodEntity entity1 = FoodFixture.createFoodEntity(1L);
         FoodEntity entity2 = FoodFixture.createFoodEntity(2L);
         List<FoodEntity> foodEntities = List.of(entity1, entity2);
 
-        given(foodRepository.findFoodCursorList(finder)).willReturn(foodEntities);
+        given(foodRepository.findFoodCursorList(cursorable,categoryId,lastCreatedAt,memberKey)).willReturn(foodEntities);
         //when
-        List<Food> results = foodManager.findFoodList(finder);
+        SliceObject<Food> results = foodManager.findFoodList(cursorable,categoryId,lastCreatedAt,memberKey);
         //then
-        assertThat(results).hasSize(2);
-        assertThat(results.getFirst().name()).isEqualTo(FoodFixture.NAME);
-        assertThat(results.get(0)).isInstanceOf(Food.class);
+        assertThat(results.getContent()).hasSize(2);
+        assertThat(results.getContent().getFirst().name()).isEqualTo(FoodFixture.NAME);
+        assertThat(results.getContent().get(0)).isInstanceOf(Food.class);
     }
 
     @Test
